k8s-prod/ecommerce-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-backend
  namespace: prod
  labels:
    app: ecommerce-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
    spec:
      containers:
        - name: ecommerce-backend
          image: vintage007/ecommerce-backend:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend-svc
  namespace: prod
spec:
  selector:
    app: ecommerce-backend
  ports:
    - port: 3001
      targetPort: 3001
  type: NodePort
