k8s-prod/ecommerce-frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-frontend
  namespace: prod
  labels:
    app: ecommerce-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce-frontend
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
        - name: ecommerce-frontend
          image: vintage007/ecommerce-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-frontend-svc
  namespace: prod
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
