k8s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: prod
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "ecommerce.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-backend-svc
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-frontend-svc
                port:
                  number: 80
  #   - host: www.toystore.com
  #     http:
  #       paths:
  #         - path: /api
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: ecommerce-backend-svc
  #               port:
  #                 number: 3001
  #         - path: /
  #           pathType: Prefix
  #           backend:
  #             service:
  #               name: ecommerce-frontend-svc
  #               port:
  #                 number: 80
  # tls:
  #   - hosts:
  #       - toystore.com
  #       - www.toystore.com
  #     secretName: toystore-co-tls
